[package]
name = "bevy_replicon_renet"
version = "0.9.0"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2024"
description = "Integration with renet for bevy_replicon"
readme = "README.md"
repository = "https://github.com/projectharmonia/bevy_replicon_renet"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
include = ["/src", "/tests", "/examples", "LICENSE*"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[dependencies]
bevy_replicon = { version = "0.32", default-features = false }
bevy_renet = { version = "1", default-features = false }
bevy = { version = "0.16", default-features = false }

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_text",
  "bevy_ui",
  "bevy_gizmos",
  "bevy_state",
  "bevy_window",
  "x11",
  "default_font",
] }
serde = "1"
clap = { version = "4", features = ["derive"] }

[features]
default = ["client", "server", "renet_netcode"]
server = ["bevy_replicon/server"]
client = ["bevy_replicon/client"]

# Re-exports of renet features
renet_netcode = ["bevy_renet/netcode"]
renet_steam = ["bevy_renet/steam"]

[[test]]
name = "netcode"
required-features = ["server", "client", "renet_netcode"]

[[example]]
name = "simple_box"
required-features = ["server", "client", "renet_netcode"]

[[example]]
name = "tic_tac_toe"
required-features = ["server", "client", "bevy_picking", "renet_netcode"]

[patch.crates-io]
bevy_replicon = { git = "https://github.com/ironpeak/bevy_replicon", rev = "91b8c79ada126026b0910a20865678c5f356f57a" }
bevy_renet = { git = "https://github.com/ironpeak/renet", rev = "104234894281830a197b8960e589fce9a42a891e" }
renet = { git = "https://github.com/ironpeak/renet", rev = "104234894281830a197b8960e589fce9a42a891e" }
